# fixshell

./: Cargo.toml  README.md  env_example
src/: bot.rs  index.rs  lib.rs  main.rs  payload.rs  routes.rs  sql.rs
