[package]
name = "fixshell"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
serde_json = "1.0"
rand = "0.8"
dashmap = "5.5"

[profile.release]
opt-level = "z"
lto = true
panic = 'abort'
strip = true
codegen-units = 1
