[package]
name = "fixshell"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros", "throttle"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
base64 = "0.21"
uuid = { version = "1.6", features = ["v4"] }
axum-extra = { version = "0.9", features = ["cookie"] }
time = "0.3.47"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

[profile.release]
opt-level = "z"
lto = true
panic = 'abort'
strip = true
codegen-units = 1
